--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/smunoz1988/JS-CapstoneProject#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.3",
     "eslint": "^7.32.0",
@@ -38,6 +39,7 @@
     "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
+    "jsdom": "^21.1.1",
     "lodash": "^4.17.21"
   }
 }
